--- a/main.tex
+++ b/main.tex
@@ -136,9 +136,9 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\clearpage
-\thispagestyle{empty}
-\null%
+%\clearpage
+%\thispagestyle{empty}
+%\null%
 %\clearpage
 %\includepdf{cover-back.pdf}
 
